--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -8,7 +8,7 @@
   top: 0;
   z-index: 1000;
   backdrop-filter: blur(1rem);
-  padding: 2% 5%;
+  padding: 1.5% 5%;
 
   a {
     text-decoration: none;
